<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/item_big_6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_question"
        />
    <TextView
        android:id="@+id/find_password_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_big_6"
        android:layout_marginLeft="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_answer"
        android:layout_marginTop="@dimen/item_big_6"/>
    <EditText
        android:id="@+id/find_password_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="200"
        android:hint="@string/input_password_answer"
        android:editable="true"/>

    <TextView
        android:id="@+id/password_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="password"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/item_big_6">
        <Button
            android:id="@+id/find_password_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@color/transparency"/>
        <Button
            android:id="@+id/find_password_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure"
            android:background="@color/transparency" />
    </LinearLayout>
</LinearLayout>